# dos-amigos-ops

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MANIFEST.json  Makefile  README.md  SHA256SUMS  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  hermes-sales-delivery-discovery.md  iiko-sales-discovery.md  iiko_access_matrix.md  permissions.md  s1-6-1-sales-import-runbook.md  s1-6-1a-sales-automation-runbook.md  s1-6-2-daily-coo-report.md
docs/adr/: 0001-system-boundary.md  0002-iiko-source-strategy.md
integrations/iiko/: __init__.py  auth.py  base.py  client.py  fixtures.py  mock.py  probe_sales.py  redaction.py  sales.py  schemas.py  server_rest.py
migrations/: env.py
migrations/versions/: 20260717_0001_initial_schema.py  20260717_0002_persistence_contract.py  20260718_0003_iiko_sales_import.py  20260718_0004_sales_automation_outbox.py  20260719_0005_daily_coo_report_stage_b.py
ops/: __init__.py
ops/telegram/: __init__.py  (+1 more)
scripts/: bootstrap.ps1  bootstrap.sh
tests/: fixtures_iiko_sales.py  test_daily_coo_report.py  test_daily_coo_report_stage_b.py  test_daily_coo_report_wrapper.py  test_health.py  test_iiko_contract.py  test_iiko_mock.py  test_iiko_sales_automation.py  test_iiko_sales_discovery.py  test_iiko_sales_normalization.py  test_iiko_sales_persistence_api.py  test_iiko_server_rest.py  test_iiko_server_rest_sales.py  test_iiko_settings.py  test_models.py  test_redaction.py  test_report_outbox_internal_api.py  test_sales_automation_artifacts.py  test_telegram_report_sender.py
(+25 files in other folders)
